--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_sign_in: ^6.1.4
   flutter_riverpod: ^2.3.6
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
