--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_riverpod: ^2.3.6
   http: ^1.1.0
+  shared_preferences: ^2.0.15
+  routemaster: ^1.0.1
+  flutter_quill: ^7.2.18
 
 dev_dependencies:
   flutter_test:
